--- a/network-policy.yaml
+++ b/network-policy.yaml
@@ -30,6 +30,13 @@ spec:
               name: data-collection-api
               port:
                 number: 8080
+        - path: /ml-api
+          pathType: Prefix
+          backend:
+            service:
+              name: ml-api
+              port:
+                number: 8080
         - path: /airflow
           pathType: Prefix
           backend:
