--- a/network-policy.yaml
+++ b/network-policy.yaml
@@ -65,6 +65,13 @@ spec:
               name: grafana
               port:
                 number: 80
+        - path: /prometheus
+          pathType: Prefix
+          backend:
+            service:
+              name: prometheus
+              port:
+                number: 9090
         - path: /
           pathType: Prefix
           backend:
